# advfs-ng

./: .gitignore  CMakeLists.txt  README.md
libadvfs/: CMakeLists.txt
module/: CMakeLists.txt  Kbuild
module/include/advfs/: domain.h  file.h  fileset.h  inode.h  mcell.h  super.h  tag.h  volume.h
module/src/: advfs.c  domain.c  file.c  fileset.c  inode.c  mcell.c  super.c  tag.c  volume.c
tools/: CMakeLists.txt
tools/addvol/: CMakeLists.txt
tools/advfdmn/: CMakeLists.txt
tools/advfdmn/include/advfs/domain/command/: addvol.h  balance.h  chvol.h  create.h  list.h  remove.h  rmvol.h  show.h  stripe.h  switchlog.h
tools/advfdmn/src/: main.c
tools/advfdmn/src/command/: addvol.c  balance.c  chvol.c  create.c  list.c  remove.c  rmvol.c  show.c  stripe.c  switchlog.c
tools/advfset/: CMakeLists.txt
tools/advfset/include/advfs/fileset/command/: change.h  clone.h  create.h  dump.h  list.h  ncheck.h  remove.h  rename.h  restore.h  show.h
tools/advfset/include/advfs/fset/command/: change.h  clone.h  create.h  remove.h  rename.h  show.h
tools/advfset/src/command/: change.c  clone.c  create.c  dump.c  list.c  ncheck.c  remove.c  rename.c  restore.c  show.c
tools/advscan/: CMakeLists.txt
tools/advstat/: CMakeLists.txt
tools/balance/: CMakeLists.txt
tools/chfile/: CMakeLists.txt
tools/chfsets/: CMakeLists.txt
tools/chvol/: CMakeLists.txt
tools/clonefset/: CMakeLists.txt
tools/defragment/: CMakeLists.txt
tools/migrate/: CMakeLists.txt
tools/mkfdmn/: CMakeLists.txt
tools/mkfset/: CMakeLists.txt
tools/mktrashcan/: CMakeLists.txt
tools/ncheck/: CMakeLists.txt
tools/renamefset/: CMakeLists.txt
tools/rmfdmn/: CMakeLists.txt
tools/rmfset/: CMakeLists.txt
tools/rmvol/: CMakeLists.txt
tools/shblk/: CMakeLists.txt
tools/shfragbf/: CMakeLists.txt
tools/showfdmn/: CMakeLists.txt
tools/showfile/: CMakeLists.txt
tools/showfsets/: CMakeLists.txt
tools/stripe/: CMakeLists.txt
tools/switchlog/: CMakeLists.txt
tools/tag2name/: CMakeLists.txt
tools/vbmtchain/: CMakeLists.txt
tools/vbmtpg/: CMakeLists.txt
tools/vdump/: CMakeLists.txt
tools/verify/: CMakeLists.txt
tools/vfile/: CMakeLists.txt
tools/vfragpg/: CMakeLists.txt
tools/vlogpg/: CMakeLists.txt
tools/vlsnpg/: CMakeLists.txt
tools/vrestore/: CMakeLists.txt
tools/vtagpg/: CMakeLists.txt
